--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     build: .
     ports:
       - "3001:3001"
+  backend:
+    build: ../FoodieConnectB/myproject/
+    ports:
+      - "8000:8000"
   
    
 
