--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@tanstack/react-query": "^5.60.6",
+    "framer-motion": "^11.11.17",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "serve": "^14.2.4"
+    "react-hook-form": "^7.53.2",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
+    "serve": "^14.2.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
