--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
     "@reduxjs/toolkit": "^2.3.0",
     "@storybook/addon-postcss": "^2.0.0",
     "@tanstack/react-query": "^5.60.6",
@@ -23,8 +27,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "reactstrap": "^9.2.3",
     "serve": "^14.2.4",
     "yup": "^1.4.0"
   },
