--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@storybook/addon-postcss": "^2.0.0",
     "@tanstack/react-query": "^5.60.6",
+    "axios": "^1.7.8",
     "framer-motion": "^11.11.17",
     "husky": "^9.1.7",
+    "js-cookie": "^3.0.5",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
