--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^6.1.8",
     "@reduxjs/toolkit": "^2.3.0",
     "@storybook/addon-postcss": "^2.0.0",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
     "@tanstack/react-query": "^5.60.6",
     "axios": "^1.7.8",
     "framer-motion": "^11.11.17",
