--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "framer-motion": "^11.11.17",
     "husky": "^9.1.7",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "reactstrap": "^9.2.3",
