--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "reactstrap": "^9.2.3",
+    "recharts": "^2.15.0",
     "serve": "^14.2.4",
     "yup": "^1.4.0"
   },
