--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
