--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_APP_API_URL=http://127.0.0.1:8000
 VITE_APP_WEBSOCKET_URL=ws://localhost:8000/ws/orders      #for local, currently in use for docker
+# VITE_APP_WEBSOCKET_URLL=ws://localhost:8000/ws/orders 
