--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "@reduxjs/toolkit": "^2.3.0",
+    "@sentry/react": "^8.47.0",
+    "@sentry/remix": "^8.47.0",
+    "@sentry/tracing": "^7.114.0",
     "@storybook/addon-postcss": "^2.0.0",
     "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
