--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "reactstrap": "^9.2.3",
     "recharts": "^2.15.0",
     "serve": "^14.2.4",
+    "webpack-bundle-analyzer": "^4.10.2",
     "wscat": "^6.0.1",
     "yup": "^1.4.0"
   },
