--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.4",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.1",
@@ -27,6 +28,7 @@
     "@tanstack/react-query": "^5.60.6",
     "axios": "^1.7.8",
     "framer-motion": "^11.11.17",
+    "graphql": "^16.10.0",
     "husky": "^9.1.7",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
