--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "reactstrap": "^9.2.3",
     "recharts": "^2.15.0",
     "serve": "^14.2.4",
+    "subscriptions-transport-ws": "^0.11.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "wscat": "^6.0.1",
     "yup": "^1.4.0"
