--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
     "@tanstack/react-query": "^5.60.6",
+    "@urql/core": "^5.1.0",
+    "@urql/exchange-multipart-fetch": "^1.1.0",
+    "apollo-upload-client": "16.0.0",
     "axios": "^1.7.8",
     "framer-motion": "^11.11.17",
     "graphql": "^16.10.0",
