--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^11.0.2",
     "reactstrap": "^9.2.3",
     "recharts": "^2.15.0",
     "serve": "^14.2.4",
