--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
+    "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^11.0.2",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.9",
     "reactstrap": "^9.2.3",
     "recharts": "^2.15.0",
     "serve": "^14.2.4",
