--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
+    "react-loading-skeleton": "^3.5.0",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^11.0.2",
