--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@urql/core": "^5.1.0",
     "@urql/exchange-multipart-fetch": "^1.1.0",
     "apollo-upload-client": "16.0.0",
+    "atob": "^2.1.2",
     "axios": "^1.7.8",
     "framer-motion": "^11.11.17",
     "graphql": "^16.10.0",
