--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'  # Specify your Node.js version
+          node-version: '22.9'  # Specify your Node.js version
 
       - name: Install Yarn dependencies
         run: |
@@ -28,7 +28,3 @@ jobs:
       - name: Run tests
         run: |
           yarn test --watchAll=false
-
-      - name: Build React app
-        run: |
-          yarn build
