--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "react-scripts test"
   },
   "dependencies": {
     "@apollo/client": "^3.12.4",
@@ -49,6 +50,7 @@
     "react-modal": "^3.16.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.2",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.9",
@@ -70,6 +72,8 @@
     "@storybook/react": "^8.4.4",
     "@storybook/react-vite": "^8.4.4",
     "@storybook/test": "^8.4.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
