posthog analytics set up

--- a/.env.docker
+++ b/.env.docker
@@ -16,3 +16,7 @@ REDIS_PORT=6379
 POSTGRES_DB=foodieconnect_db
 POSTGRES_USER=foodieconnect_user
 POSTGRES_PASSWORD=foodieconnect_password
+
+
+VITE_APP_PUBLIC_POSTHOG_KEY=phc_TDyCtouICMCEfeRwlsgIrWCwtJEOO5DJpfQOaVfuzgp
+VITE_APP_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
