--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -30,6 +30,9 @@ jobs:
         env:
           CI: true  # Prevents Create React App from hanging in CI
 
+      - name: Install wait-on
+        run: yarn add wait-on --dev
+
       - name: Wait for App to be Ready
         run: yarn run wait-on http://localhost:3001 --timeout 60000  # Ensures app is running before tests
 
