--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.4",
+    "@badeball/cypress-cucumber-preprocessor": "^21.0.3",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.4",
+    "@cypress/webpack-preprocessor": "^6.0.2",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.1",
@@ -38,6 +41,7 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "lint-staged": "^15.2.10",
+    "posthog-js": "^1.217.1",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
@@ -55,7 +59,7 @@
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.9",
     "reactstrap": "^9.2.3",
-    "recharts": "^2.15.0",
+    "recharts": "^2.15.1",
     "serve": "^14.2.4",
     "subscriptions-transport-ws": "^0.11.0",
     "webpack-bundle-analyzer": "^4.10.2",
@@ -78,6 +82,8 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "cypress": "^14.0.3",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -88,7 +94,8 @@
     "prop-types": "^15.8.1",
     "storybook": "^8.4.4",
     "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "wait-on": "^8.0.2"
   },
   "engines": {
     "node": ">=14.0.0"
