--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Delay to Ensure App is Ready
         run: sleep 5  # Wait 10 seconds before running tests
 
-      - name: Run Cypress Tests with Debug Logs
-        run: DEBUG=cypress:* yarn cypress run --headless --config retries=2  # Run Cypress tests in headless mode
+      - name: Run Cypress Tests
+        run: yarn cypress run --headless --config retries=2  # Run Cypress tests in headless mode
 
 
       - name: Upload Cypress Screenshots (if tests fail)
