--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -45,7 +45,7 @@ jobs:
           path: cypress/screenshots
           
       - name: Upload Cypress Videos (if tests fail)
-        if: failure()
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-videos
