--- a/.github/workflows/reactDjango.yml
+++ b/.github/workflows/reactDjango.yml
@@ -30,16 +30,16 @@ jobs:
 
       - name: Install Backend Dependencies
         run: |
-          cd myproject
+          
           python -m venv venv
           source venv/bin/activate
-          pip install -r requirements.txt
+          pip install -r myproject/requirements.txt
           python manage.py migrate
         
       # 4️⃣ Start Django Backend with Daphne
       - name: Start Backend with Daphne
         run: |
-          cd myproject
+          
           source venv/bin/activate
           daphne -b 0.0.0.0 -p 8000 myproject.asgi:application &
         
