--- a/.github/workflows/reactDjango.yml
+++ b/.github/workflows/reactDjango.yml
@@ -33,7 +33,7 @@ jobs:
           
           python -m venv venv
           source venv/bin/activate
-          pip install -r myproject/requirements.txt
+          pip install -r requirements.txt
           python manage.py migrate
         
       # 4️⃣ Start Django Backend with Daphne
