--- a/.github/workflows/reactDjango.yml
+++ b/.github/workflows/reactDjango.yml
@@ -33,8 +33,8 @@ jobs:
           
           python -m venv venv
           source venv/bin/activate
-          pip install -r requirements.txt
-          python manage.py migrate
+          pip install -r myproject/requirements.txt
+          python myproject/manage.py migrate
         
       # 4️⃣ Start Django Backend with Daphne
       - name: Start Backend with Daphne
