--- a/.github/workflows/reactDjango.yml
+++ b/.github/workflows/reactDjango.yml
@@ -40,6 +40,7 @@ jobs:
       # 4️⃣ Start Django Backend with Daphne
       - name: Start Backend with Daphne
         run: |
+          cd FoodieConnectB/myproject
           ls
           source venv/bin/activate
           daphne -b 0.0.0.0 -p 8000 myproject.asgi:application &
