--- a/.github/workflows/reactDjango.yml
+++ b/.github/workflows/reactDjango.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    
 
     steps:
       # 1️⃣ Checkout the frontend repo
@@ -21,30 +20,34 @@ jobs:
         run: |
           git clone -b main https://github.com/artsemlemesh/FoodieConnectB.git 
 
-      # 3️⃣ Set up Python & install backend dependencies
+      # 3️⃣ Set up Python & Install Backend Dependencies (with Cache)
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
+      - name: Cache Python dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('FoodieConnectB/myproject/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install Backend Dependencies
         run: |
-          
           cd FoodieConnectB/myproject
-          ls
           python -m venv venv
           source venv/bin/activate
-          pip install -r requirements.txt
+          pip install --cache-dir ~/.cache/pip -r requirements.txt
           python manage.py migrate
-        
+
       # 4️⃣ Start Django Backend with Daphne
       - name: Start Backend with Daphne
         run: |
           cd FoodieConnectB/myproject
-          ls
           source venv/bin/activate
           daphne -b 0.0.0.0 -p 8000 myproject.asgi:application &
-        
 
       # 5️⃣ Wait for Backend to be Ready
       - name: Wait for Backend
@@ -52,12 +55,20 @@ jobs:
           sleep 10  # Wait for DB & backend to initialize
           curl --retry 10 --retry-delay 5 --retry-connrefused -I http://localhost:8000
 
-      # 6️⃣ Set up Node.js & Install Frontend Dependencies
+      # 6️⃣ Set up Node.js & Cache Dependencies
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: yarn
+
+      - name: Cache Node.js Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.yarn
+          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Install Frontend Dependencies
         run: yarn install --frozen-lockfile
