--- a/.github/workflows/reactDjango.yml
+++ b/.github/workflows/reactDjango.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('FoodieConnectB/myproject/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('FoodieConnectB/myproject/requirements.txt') }}-${{ hashFiles('FoodieConnectB/myproject/Pipfile', 'FoodieConnectB/myproject/Pipfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
@@ -65,7 +65,9 @@ jobs:
       - name: Cache Node.js Dependencies
         uses: actions/cache@v3
         with:
-          path: ~/.yarn
+          path: |
+            ~/.yarn
+            node_modules
           key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
