--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@ VITE_APP_API_URL=http://127.0.0.1:8000
 VITE_APP_WEBSOCKET_URL=ws://localhost:8000/ws/orders      #for local, currently in use for docker
 # VITE_APP_WEBSOCKET_URLL=ws://localhost:8000/ws/orders 
 
+VITE_APP_WEBSOCKET_LIVE_DELIVERY=ws://localhost:8000/ws/delivery_tracking  
+
 VITE_APP_PUBLIC_POSTHOG_KEY=phc_TDyCtouICMCEfeRwlsgIrWCwtJEOO5DJpfQOaVfuzgp
 VITE_APP_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
