--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
-    "react-leaflet": "^4.2.1",
+    "react-leaflet": "4.2.1",
     "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.3",
     "react-redux": "^9.1.2",
