--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ VITE_APP_WEBSOCKET_LIVE_DELIVERY=ws://localhost:8000/ws/delivery_tracking
 
 VITE_APP_PUBLIC_POSTHOG_KEY=phc_TDyCtouICMCEfeRwlsgIrWCwtJEOO5DJpfQOaVfuzgp
 VITE_APP_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
+
+
+REDIS_HOST=redis
+REDIS_PORT=6379
