--- a/.env.docker
+++ b/.env.docker
@@ -12,6 +12,8 @@ DB_PORT=5432
 REDIS_HOST=redis
 REDIS_PORT=6379
 
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
 
 POSTGRES_DB=foodieconnect_db
 POSTGRES_USER=foodieconnect_user
